python-oq-platform (1.7.1)
  
  [Paolo Tormene]
  * irv: enable visualizing projects in which one or more composite indices were
    calculated using custom operators, and disable changing weights in such cases.

  [Daniele Viganò]
  * Add Creative Commons 4 licenses

python-oq-platform (1.6.0)

  [Daniele Viganò]
  * Get rid of icebox

  [Matteo Nastasi]
  * move IPT (ex RIPT) app as independent repository to be able to install
    it as stand-alone django app
  * add possibility to install test locally on not ephemeral LXC

  [Paolo Tormene]
  * irv: improved Parallel Coordinates Plots, able to visualize and filter data
    also for projects taking into account a big number of regions
  * irv: display meaningful results also for projects containing some missing
    data
  * vulnerability and irv: only authenticated superusers can run jasmine tests
  * irv: display the project's title on top of the project definition widget
  * hrde: manage supplemental layers through the "Layer Manager" widget
  * irv: better error messages in case of incompatible projections
  * irv: when a region is clicked in the map, the corresponding line in
    the PCP charts is highlighted
  * irv: when brushes are used to filter data in one chart, the selected zones
    are also highlighted in the other charts
  * move Taxtweb app as independent repository to be able to install
    it as stand-alone django app

python-oq-platform (1.5.0)

  [Matteo Nastasi]
  * ript: add "Sites Conditions" tab
  * ript: smarter split procedure
  * ript: grand refactoring
  * ript: add positive integer 'example_id' parameter to load examples and
    at least 1 example for each tab
  * ript: add positive integer 'tab_id' parameter to land on a specific tab
  * ript: add "<?xml..." header line to <textarea> item

  [Paolo Tormene]
  * irv: less redundant calculations and better management of operators
  * irv: when clicking on the map, display in the info box only information